force-app/main/default/objects/redwing__Learning_Assignment_Request__c/redwing__Learning_Assignment_Request__c.object-meta.xml
<CustomObject>
    <label>Learning Assignment Request</label>
    <nameField>
        <displayFormat>LAR-{0000}</displayFormat>
        <label>Learning Assignment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Assignment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>