force-app/main/default/objects/redwing__Learning_Assignment_Request__c/fields/redwing__Assign_Option__c.field-meta.xml
<CustomField>
    <fullName>redwing__Assign_Option__c</fullName>
    <inlineHelpText>Additional information for Assign process.</inlineHelpText>
    <label>Assign Option</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>