force-app/main/default/objects/redwing__Learning_Assignment_Request__c/fields/redwing__Learning_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Learning Plan record.</inlineHelpText>
    <label>Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Learning Assignment Requests</relationshipLabel>
    <relationshipName>Learning_Assignment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>