force-app/main/default/objects/redwing__Learning_Assignment_Request__c/fields/redwing__Processed__c.field-meta.xml
<CustomField>
    <fullName>redwing__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is checked when the Assignment Request has been processed with an error. Review the Processing Errors field for information.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>