force-app/main/default/objects/redwing__Learning_Assignment_Request__c/fields/redwing__Processing_Errors__c.field-meta.xml
<CustomField>
    <fullName>redwing__Processing_Errors__c</fullName>
    <inlineHelpText>Processing Errors information.</inlineHelpText>
    <label>Processing Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>