force-app/main/default/objects/redwing__Learning_Assignment_Request__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <inlineHelpText>Type of Learning Assignment Request.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple Assignment</fullName>
            </value>
            <value>
                <fullName>Related Learning</fullName>
            </value>
            <value>
                <fullName>Learning Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>