force-app/main/default/objects/redwing__Learning_Assignment_Request__c/fields/redwing__User__c.field-meta.xml
<CustomField>
    <fullName>redwing__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related User record.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Learning_Assignment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>